03 Jun 2003 mipsator
 * updated makefile sample to use LIBS and CFLAGS.
 * added CFLAGS and LIBS support in pmk_check_config().
 * added LIBS support in pmk_check_lib().
 * fixed initialisation of the buffer in hash_append().

02 Jun 2003 mipsator
 * improved hash_append().
 * updated hash_test.c to test appending function.

01 Jun 2003 mipsator
 * added hash_append().

31 May 2003 mipsator
 * added strlcat.c and strlcat.h in compat directory.
 * pmkcfg.sh now have a check for strlcat.
 * fully included strlcat in compat.
 * added da_pop() in dynarray and updated relative test.
 * use INC_PATH in pmk_check_include().
 * use LIB_PATH in pmk_check_lib().

28 May 2003 mipsator
 * misc changes in Makefile.
 * changed samples/ac_config.h into samples/ac_config.h.sample .
 * ac_config.h.sample is more complete.

27 May 2003 mipsator
 * record_val() is now functional.
 * use record_val() for almost all tests.
 * fixed/improved parse_ac_config().
 * enabled parse_ac_config() in pmk.

25 May 2003 mipsator
 * few changes related to autoconf compatibility.

23 May 2003 mipsator
 * added AC_COMPAT in pmkfile.sample plus some comments.
 * added samples/ac_config.h for autoconf compatibility test.
 * AC_COMPAT now handle FILENAME to set the configuration file to process.
 * ac_file is now included in pmkdata structure.

22 May 2003 mipsator
 * improve a bit copy_text_file().
 * add parse_ac_config(), not finished yet but it doesn't break the code.

21 May 2003 mipsator
 * added copy_text_file().
 * misc on buffers.

15 May 2003 xsa
 * now using hash_add_array() for the predefined variables in pmksetup.

15 May 2003 mipsator
 * added AC_COMPAT for autoconf compatibility.
 * cleanup in various files (XXX comments).
 * added missing check (XXX comments).
 * misc.

14 May 2003 mipsator
 * moved functab and misc related.
 * use hash_add_array() in hash_test.

06 May 2003 mipsator
 * use depend_check() in check functions.
 * rewritten depend_check().
 * added require_check().
