@@ -41,15 +41,15 @@
 */
 
 /* availability of strlcpy */
-@DEF_STRLCPY@	HAVE_STRLCPY
+@DEF__STRLCPY@
 
 /* availability of strlcat */
-@DEF_STRLCAT@	HAVE_STRLCAT
+@DEF__STRLCAT@
 
 /* availability of stdbool.h (ISO C99) */
-@DEF_STDBOOL_H@	HAVE_STDBOOL_H
+@DEF__STDBOOL_H@
 
 /* availability of libgen.h (dirname and filename) */
-@DEF_LIBGEN_H@ HAVE_LIBGEN_H
+@DEF__LIBGEN_H@
 
 #endif /* _PMK_COMPAT_H_ */
